--- a/style.css
+++ b/style.css
@@ -13,3 +13,13 @@ body{
     font-family: "Lato", sans-serif;
 }
 
+header{
+    position: relative;
+    width: 100%;
+    height: 80px;
+    background: rgba(0,0,0,.5);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
