--- a/style.css
+++ b/style.css
@@ -23,3 +23,13 @@ header{
     justify-content: center;
     align-items: center;
 }
+
+h1,h2{
+    color:#ccc;
+    font-family: Lato, sans-serif;
+    font-weight: 500;
+}
+
+h1{
+    font-size: 40px;
+}
