--- a/style.css
+++ b/style.css
@@ -33,3 +33,16 @@ h1,h2{
 h1{
     font-size: 40px;
 }
+.contenedor{
+    position: absolute;
+    width: 70%;
+    height: 35%;
+    max-width: 600px;
+    background-color: rgba(0,0,0,.4);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
