--- a/style.css
+++ b/style.css
@@ -46,3 +46,14 @@ h1{
     align-items: center;
     justify-content: space-around;
 }
+
+
+.cont_x{
+    position: relative;
+    width: 50px;
+    height: 44px;
+    
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
