--- a/style.css
+++ b/style.css
@@ -1,59 +1,79 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    background-image: url("./background.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    font-family: "Lato", sans-serif;
+body {
+  background-image: url("./background.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  font-family: "Lato", sans-serif;
 }
 
-header{
-    position: relative;
-    width: 100%;
-    height: 80px;
-    background: rgba(0,0,0,.5);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+header {
+  position: relative;
+  width: 100%;
+  height: 80px;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-h1,h2{
-    color:#ccc;
-    font-family: Lato, sans-serif;
-    font-weight: 500;
+h1,
+h2 {
+  color: #ccc;
+  font-family: Lato, sans-serif;
+  font-weight: 500;
 }
 
-h1{
-    font-size: 40px;
+h1 {
+  font-size: 40px;
 }
-.contenedor{
+.contenedor {
+  position: absolute;
+  width: 70%;
+  height: 35%;
+  max-width: 600px;
+  background-color: rgba(0, 0, 0, 0.4);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.cont_x {
+  position: relative;
+  width: 50px;
+  height: 44px;
+
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+.cont_x span{
     position: absolute;
-    width: 70%;
-    height: 35%;
-    max-width: 600px;
-    background-color: rgba(0,0,0,.4);
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+    width: 100%;
+    height: 4px;
+    left: 0;
+    background-color: #fff;
+    border-radius: 4px;
+    transition: all .5s;
 }
 
-
-.cont_x{
-    position: relative;
-    width: 50px;
-    height: 44px;
-    
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-}
