.cont_x span:nth-last-of-type

--- a/style.css
+++ b/style.css
@@ -77,3 +77,14 @@ h1 {
     transition: all .5s;
 }
 
+
+.cont_x span:nth-last-of-type(1){
+    top: 0;
+}
+
+.cont_x span:nth-last-of-type(3){
+
+    bottom: 0;
+}
+
+
