--- a/style.css
+++ b/style.css
@@ -87,4 +87,15 @@ h1 {
     bottom: 0;
 }
 
+.cont_x.active span:nth-last-of-type(1){
+    
+    transform: translateY(20px) rotate(-45deg);
+    background-color: #faa207;
+}
+
+.cont_x.active span:nth-last-of-type(3){
+    
+    transform: translateY(-20px) rotate(45deg);
+    background-color: #faa207;
+}
 
