--- a/style.css
+++ b/style.css
@@ -99,3 +99,11 @@ h1 {
     background-color: #faa207;
 }
 
+.cont_x.active span:nth-last-of-type(2){
+    background-color: #faa207;
+    opacity: 0;
+}
+
+.menu2.active span:nth-last-of-type(2){
+    left: 80%;
+}
