--- a/style.css
+++ b/style.css
@@ -107,3 +107,17 @@ h1 {
 .menu2.active span:nth-last-of-type(2){
     left: 80%;
 }
+
+.menu2.active:before{
+    position: absolute;
+    width: 84px;
+    height: 84px;
+    content: "";
+    border: 4px solid transparent;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: circulo .5s .3s forwards;
+    margin: -45px 0 0 -45px;
+}
